toList cambiado