@@ -8,6 +8,7 @@ import edu.austral.ingsis.clifford.CommandParser;
 import edu.austral.ingsis.clifford.FileSystem;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 
 public class FileSystemTests {
@@ -16,9 +17,10 @@ public class FileSystemTests {
       new FileSystemRunnerImplementation(new CLI(new FileSystem(), new CommandParser()));
 
   private void executeTest(List<Map.Entry<String, String>> commandsAndResults) {
-    final List<String> commands = commandsAndResults.stream().map(Map.Entry::getKey).toList();
+    final List<String> commands =
+        commandsAndResults.stream().map(Map.Entry::getKey).collect(Collectors.toList());
     final List<String> expectedResult =
-        commandsAndResults.stream().map(Map.Entry::getValue).toList();
+        commandsAndResults.stream().map(Map.Entry::getValue).collect(Collectors.toList());
 
     final List<String> actualResult = runner.executeCommands(commands);
 
